--- a/README.html
+++ b/README.html
@@ -14,10 +14,7 @@
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.body.appendChild(renderer.domElement);
 
-    const loader = new OBJLoader();
-    loader.load('C:/Users/tudor/Documents/GIT/2023_UNIBE_Computer_Vision_3/logs/resources/gt_views/mesh.obj', (object) => {
-      scene.add(object);
-    });
+    document.write('<script src="https://gist.github.com/tudi72/2bede8a476c030c7945a4f841f32d297.js"></script>');
 
     camera.position.z = 5;
 
